# workspace

./: .coderabbit.yaml  .env.example  CLAUDE.md  COMPETITIVE-BRIEF.md  ROADMAP.md  VISION.md  eslint.config.js  index.html  package.json
.github/workflows/: release.yml
e2e/: tauri-mocks.ts
public/: splash.html
src/: App.tsx  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/academy/: manager.rs
src/features/academy/: index.ts
src/features/academy/components/: AcademyView.tsx  AuthPrompt.tsx  FeedView.tsx  ModeSwitcher.tsx  ProfileButton.tsx
src/features/academy/store/: academySlice.ts
src/features/activity/components/: ActivityPanel.tsx
src/features/chat/components/: ChatInput.tsx  ChatPanel.tsx
src/features/chat/store/: chatSlice.ts
src/features/editor/components/: CodeMirrorEditor.tsx
src/features/editor/store/__tests__/: editorSlice.test.ts
src/features/explorer/components/: ActivityBar.tsx  ProjectOverview.tsx  TreeItem.tsx
src/features/feedback/components/: BugReportDialog.tsx
src/features/git/components/: GitPanel.tsx
src/features/preview/store/: previewSlice.ts
src/features/project/components/: LaunchConfigDialog.tsx
src/features/settings/components/: UpdateBadge.tsx
src/features/settings/hooks/: useUpdateChecker.ts
src/features/settings/store/: settingsSlice.ts
src/features/ssh/components/: SshConnectionList.tsx  SshKeyBrowser.tsx  SshPortForwardPanel.tsx
src/features/terminal/components/: QuickLaunch.tsx  TabBar.tsx  XtermPanel.tsx
src/shared/components/: CommandPalette.tsx
src/shared/hooks/: useKeyboardShortcuts.ts
src/shared/i18n/: en.json  ru.json
src/shared/lib/: analytics.ts  constants.ts  supabase.ts  tauri.ts  types.ts
src/store/: index.ts
