[package]
name = "kodiq"
version = "0.5.0"
description = "AI Workspace"
authors = ["Kodiq Team"]
license = "Apache-2.0"
repository = "https://github.com/kodiq-ai/ide"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# pro = ["reqwest"]  # Uncomment when reqwest is added (Phase 6)

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"

# Terminal
portable-pty = "0.8"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }
dirs = "6"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

# Observability
sentry = { version = "0.35", features = ["tracing", "panic", "debug-images", "reqwest", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem watcher
notify = "8"
notify-debouncer-mini = "0.6"

# Typed errors
thiserror = "2"

# SSH remote development
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util"] }
tokio-util = "0.7"
async-trait = "0.1"

# URL parsing (preview webview)
url = "2"

# DevTools bridge (WebSocket for preview console/network)
tungstenite = "0.24"

# Future additions (uncomment when needed):
# reqwest = { version = "0.12", optional = true }  # Pro HTTP client

[dev-dependencies]
tempfile = "3"

# Auto-update (desktop only)
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
